--- a/package.json
+++ b/package.json
@@ -4,27 +4,25 @@
   "description": "taxiBlank: An Ionic project",
   "main": "web.js",
   "dependencies": {
+    "express": "^4.13.3",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
-
   "engines": {
     "node": "4.0.0"
   },
-  
   "repository": {
-  "type": "git",
-  "url": "git://github.com/partidiricambi/London-Taxi-Knowledge.git" 
-},
-
+    "type": "git",
+    "url": "git://github.com/partidiricambi/London-Taxi-Knowledge.git"
+  },
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
